Search and list with recipe types were added in index view

--- a/src/Web/RecipeBook.Web/RecipeBook.Web.csproj
+++ b/src/Web/RecipeBook.Web/RecipeBook.Web.csproj
@@ -36,4 +36,8 @@
     <ProjectReference Include="..\RecipeBook.Web.Infrastructure\RecipeBook.Web.Infrastructure.csproj" />
     <ProjectReference Include="..\RecipeBook.Web.ViewModels\RecipeBook.Web.ViewModels.csproj" />
   </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
 </Project>
