--- a/src/Web/RecipeBook.Web/RecipeBook.Web.csproj
+++ b/src/Web/RecipeBook.Web/RecipeBook.Web.csproj
@@ -8,7 +8,12 @@
 
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
+    <AssemblyName>RecipeBook.Web</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Controllers\SideBarController.cs" />
+  </ItemGroup>
 
   <ItemGroup>
     <None Remove="TScripts\site.ts" />
