1.See only current user votes and order them per user data 2.Appsettings.Release.json is added 3.Crop image is changed to make jpg files 4.Bug with buttons in menu and list of recipes when they are viewed at small screen is fixed

--- a/src/Web/RecipeBook.Web/appsettings.Release.json
+++ b/src/Web/RecipeBook.Web/appsettings.Release.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=RecipeBookTest;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=RecipeBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
