1.SearchResultItemViewModel is replaced with IngredientsSearchResultItemViewModel and RecipesSearchResultItemViewModel

--- a/src/Web/RecipeBook.Web.ViewModels/RecipeBook.Web.ViewModels.csproj
+++ b/src/Web/RecipeBook.Web.ViewModels/RecipeBook.Web.ViewModels.csproj
@@ -8,6 +8,11 @@
   <PropertyGroup>
     <CodeAnalysisRuleSet>..\..\Rules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Home\ISearchResultItemViewModel.cs" />
+    <Compile Remove="Home\SearchResultItemViewModel.cs" />
+  </ItemGroup>
   <ItemGroup>
     <AdditionalFiles Include="..\..\stylecop.json" />
   </ItemGroup>
