--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - name: Checkout code
       - uses: actions/checkout@v2
+      
 
       - name: Setup .Net 5
       - uses: actions/setup-dotnet@v1
@@ -21,8 +22,8 @@ jobs:
       -name: Restore dependencies
       ru: dotnet restore
 
-      -name: Build app
-       run: dotnet build-c Release --no-restore
+      # -name: Build app
+      #  run: dotnet build-c Release --no-restore
 
        
 
