--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,14 +16,14 @@ jobs:
 
       - name: Setup .Net 5
       - uses: actions/setup-dotnet@v1
-  with:
-    dotnet-version: '5.0.x'
+      with:
+      dotnet-version: '5.0.x'
 
       -name: Restore dependencies
-      ru: dotnet restore
+      run: dotnet restore
 
-      # -name: Build app
-      #  run: dotnet build-c Release --no-restore
+      -name: Build app
+      run: dotnet build-c Release --no-restore
 
        
 
