--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -11,19 +11,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       
 
       - name: Setup .Net 5
-      - uses: actions/setup-dotnet@v1
-      with:
-      dotnet-version: '5.0.x'
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
 
-      -name: Restore dependencies
-      run: dotnet restore
+      - name: Restore dependencies
+        run: dotnet restore
 
-      -name: Build app
-      run: dotnet build-c Release --no-restore
+      - name: Build app
+        run: dotnet build-c Release --no-restore
 
        
 
