--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,7 +15,7 @@ jobs:
       
 
       - name: Setup .Net 5
-        uses: actions/setup-dotnet@v1
+       - uses: actions/setup-dotnet@v1
         with:
           dotnet-version: '5.0.x'
 
