--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -12,7 +12,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      
 
       - name: Setup .Net 5
         uses: actions/setup-dotnet@v1
@@ -20,7 +19,7 @@ jobs:
           dotnet-version: '5.0.x'
 
       - name: Restore dependencies
-        run: dotnet restore
+        run: dotnet restore ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj
 
       - name: Build app
         run: dotnet build-c Release --no-restore
