--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,7 +28,7 @@ jobs:
         run: npm i --save-dev @types/jquery
 
       - name: npm cropperjs install
-        run: npm i --save-dev @typescropperjs
+        run: npm i --save-dev @types/cropperjs
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
