--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,7 +28,10 @@ jobs:
         run: npm i --save-dev @types/jquery
 
       - name: npm cropperjs install
-        run: npm i --save-dev @types/cropperjs
+        run: npm i --save-dev @types/cropperjs@1.5.9
 
+        - name: npm jqueryui install
+        run: npm i --save-dev @types/jqueryui@1.12.1
+        
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
