--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,10 +28,10 @@ jobs:
         run: npm i --save-dev @types/jquery
 
       - name: npm cropperjs install
-        run: npm i --save-dev @types/cropperjs@1.5.11
+        run: npm i --save-dev @types/cropperjs
 
         - name: npm jqueryui install
-        run: npm i --save-dev @types/jqueryui@1.12.13
+        run: npm i --save-dev @types/jqueryui
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
