--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: npm jquery install
         run: npm i --save-dev @types/jquery
 
-      - name: npm cropperjs install
-        run: npm i --save-dev @types/cropperjs
+      # - name: npm cropperjs install
+      #   run: npm i --save-dev @types/cropperjs
 
         - name: npm jqueryui install
         run: npm i --save-dev @types/jqueryui
