--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,10 +28,13 @@ jobs:
         run: npm i --save-dev @types/jquery
 
       - name: npm cropperjs install
-        run: npm i --save-dev @types/cropperjs
+        run: npm install cropperjs
+
+      - name: npm cropperjs add dependencies
+        run: npm --save-dev @types/cropperjs
 
       - name: npm jqueryui install
-        run: npm i --save-dev @types/jqueryui
+        run: npm i --save-dev @types/jqueryui@1.12.13
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
