--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -27,11 +27,11 @@ jobs:
       - name: npm jquery install
         run: npm i --save-dev @types/jquery
 
-      - name: npm cropperjs install
-        run: npm install cropperjs
+      # - name: npm cropperjs install
+      #   run: npm install cropperjs
 
-      - name: npm cropperjs add dependencies
-        run: npm --save-dev @types/cropperjs
+      - name: npm cropperjs install
+        run: npm install @types/cropperjs
 
       - name: npm jqueryui install
         run: npm i --save-dev @types/jqueryui@1.12.13
