--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -28,13 +28,16 @@ jobs:
         run: npm i --save-dev @types/jquery
 
       # - name: npm cropperjs install
-      #   run: npm install cropperjs
-
-      - name: npm cropperjs install
-        run: npm install cropperjs -g
+      #   run: npm install cropperjs      
 
       - name: npm jqueryui install
         run: npm i --save-dev @types/jqueryui@1.12.13
+
+        - name: npm cropperjs install
+        run: npm install cropperjs
+
+        -name: move cropperjs
+        run: cp ./src/Web/RecipeBook.Web/node_modules/cropperjs ./src/Web/RecipeBook.Web/node_modules/@types/cropperjs
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
