--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -38,7 +38,7 @@ jobs:
 
       - name: move cropperjs
         # run: cp /home/runner/work/RecipeBook/RecipeBook/src/Web/RecipeBook.Web/node_modules/cropperjs /home/runner/work/RecipeBook/RecipeBook/src/Web/RecipeBook.Web/node_modules/@types/cropperjs
-        run: ls /home/runner/work/RecipeBook/RecipeBook/src/Web/RecipeBook.Web
+        run: ls /home/runner/work/RecipeBook/RecipeBook
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
