email sender is added

--- a/.gitignore
+++ b/.gitignore
@@ -358,3 +358,124 @@ MigrationBackup/
 appsettings.Production.json
 *.min.css
 *.min.js
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/2ec9289f-358b-48c2-b13e-c3d85bc31bba_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/3a1f3124-1371-46eb-bfad-a9cdf53461d3_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/3a300939-262b-4037-a2df-b123cc1713fd_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/3bbc4043-9d74-4a87-8d02-411653e45e57_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/6d781fb3-29b1-43ad-8aeb-6c6ce0293fb5_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/7ab75ad6-63e3-4551-a306-c8c2d216e407_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/7b978ed5-efa7-4c1d-87fd-aa207550aca6_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/8c3bffc6-ec5b-4e36-997d-1e536a4ab395_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/45bd17dd-59ee-44cc-b4e4-9d2a476897e3_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/53043eda-f87f-423e-a5d0-6677365de30e_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/90910e44-4af9-4021-95e1-4dcb66585719_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/128687bd-7373-4298-a2c5-5c3d50b946e7_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/93241786-36dc-47a0-8dcb-67b0cde456be_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/a0effe66-f5ef-4226-b1cb-7eca63b3add7_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/a957382e-450b-4bf4-bf06-83ffad012710_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/b3b9b91f-d8ec-4254-8349-4ab273535eb7_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/b50d20c7-38b0-4b27-8e7d-bcea13bd650c_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/bfc7fb6a-6bd2-4af3-9009-57b6d60e1c03_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/c9f2bc29-6089-4b1d-9a4d-c352f2292bae_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/cb611428-a4ea-480d-912c-a1587d240ecc_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/ddd0cf0c-24f5-4771-ac00-9fa166ea9dc3_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/e7bff903-9507-4971-8436-0b29b3d0751a_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/ec3b441e-b2b9-4f81-ab62-828cadaa432b_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/f4c0dd03-483a-48f4-b0b0-4b5bdb270409_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/f083c331-1216-4c2a-9975-a527b6a4dbe0_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Ingredients/f367109e-3a46-43fc-9ac1-8b17ec6af0ca_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/0b3aea7d-d237-4d85-9d2f-c014c1e34d8b_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/00b86174-580b-45bf-a981-ea8036892480_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/0d345dd5-a059-46d9-9514-e465daa519a2_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/1cdd268c-83b5-4949-b21a-061ec6b72afb_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/2e213e6a-954f-45f7-8536-1d33c22afcbd_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/4eaf192b-9fee-41ce-b7e8-b0ae9f3c4655_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/5a36169d-26ce-4932-8b35-db45e89093e8_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/8b6a1d98-bd67-4a78-b8f9-07b133c82c6c_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/9b1f7a21-9d23-45e4-9b37-04f1ad40d854_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/28caee9b-0825-4b3b-bc41-ea7957feab39_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/70c6c88c-138f-4a3a-944a-dd634ac308aa_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/74dd0423-6b7d-4a31-bfa2-f5ef9db9a827_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/181d9974-ab52-4cea-97ab-02e44bfba594_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/271c14ee-f2a6-4b1c-9fdf-b704f1a16ff4_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/411e6eaf-4fcb-4227-8283-4a521006910d_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/724c3ef2-2b0e-4333-b74d-5177629deba1_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/814c32b4-3f8b-4f29-8d8c-4efeb7f33ae5_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/01492c1d-4f68-473e-b13e-c5e1a92467b4_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/4775ce9c-e904-4dbf-8dc6-5b299a2c5335_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/44877faf-baaf-40a4-90b2-c1079f93e104_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/55257c66-33ec-47ee-ae1c-ad5c10234a70_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/82888b87-3105-4932-8374-6503eb3d5b52_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/94694fee-18ba-4fb4-bf2a-e069a033181c_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/2001629a-44d5-4ae3-afb5-f726b7876562_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/18996178-8f75-43c4-b2e6-39f8af83794a_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/a0e76a7c-e156-4598-b084-c93030781b1d_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/a50a4738-002e-4e37-abdf-a5527808351d_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/a316a17e-be74-4a96-bf3b-13e32a73a00f_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/ab79db52-c13b-40f9-a4e4-1190b981f7af_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/b5ba726f-91ef-4835-ad08-43a70b8d0060_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/b7aa5669-9595-4c94-b946-399c37b593d5_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/b790ab09-2917-4cf1-92ae-326a899b6105_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/c9f2bc29-6089-4b1d-9a4d-c352f2292bae_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/c138081a-4087-4ce0-b8e5-61c2f8456047_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/d25655d9-cf1f-4e2a-abb4-f53b9e8926be_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/db93c9ee-e436-485a-b657-3d137e54bb70_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/ddf4d928-bd4a-4797-b198-6d6faea287d8_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/e818085c-23cf-4a61-957e-6b07d80e06ad_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/eeac96d7-3b9f-4674-8675-4957cea9a51b_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/f2f30e22-02a5-4fb7-a2fa-16a85029c4a9_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/fe5f9d9c-e9a8-48e7-9499-38389db5dbbb_Img.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/fffe0a00-4d32-4f2f-8bd7-89c03e16ac22_Img.png
+src/Web/RecipeBook.Web/wwwroot/images/Recipes/TestCopy.jpg
+src/Web/RecipeBook.Web/wwwroot/images/4970691-13-_easy_salads_-_shutterstock.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Bean.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Beans.jpg
+src/Web/RecipeBook.Web/wwwroot/images/BeansNew.jpg
+src/Web/RecipeBook.Web/wwwroot/images/BeanSoup.jpg
+src/Web/RecipeBook.Web/wwwroot/images/BeanSoupNew.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Cabbage-Rice-1024x1536.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Cabbage.jpg
+src/Web/RecipeBook.Web/wwwroot/images/dddd.png.txt
+src/Web/RecipeBook.Web/wwwroot/images/depositphotos_29776021-stock-photo-soup.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Dessert.jpeg
+src/Web/RecipeBook.Web/wwwroot/images/Dessert.png
+src/Web/RecipeBook.Web/wwwroot/images/Desserts_.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Desserts.jpg
+src/Web/RecipeBook.Web/wwwroot/images/DessertsNew.png
+src/Web/RecipeBook.Web/wwwroot/images/DessertsNewOld.jpg
+src/Web/RecipeBook.Web/wwwroot/images/DessertsOld.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Error.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Fish.htm
+src/Web/RecipeBook.Web/wwwroot/images/Fish.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Letils.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Main_dishes_old.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Main_dishes.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Main_dishes.png
+src/Web/RecipeBook.Web/wwwroot/images/Onion.jpg
+src/Web/RecipeBook.Web/wwwroot/images/partridge-in-cider-with-apples-celery-dd0f3c6.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Placeholder.png
+src/Web/RecipeBook.Web/wwwroot/images/PlaceHolder680x680.jpg
+src/Web/RecipeBook.Web/wwwroot/images/PlaceHolder680x900.png
+src/Web/RecipeBook.Web/wwwroot/images/Salads_Old.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Salads.jpg
+src/Web/RecipeBook.Web/wwwroot/images/soup_original.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Soups_Old.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Soups.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Soups.png
+src/Web/RecipeBook.Web/wwwroot/images/SoupsNewOld.jpg
+src/Web/RecipeBook.Web/wwwroot/images/SoupsOld.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Vanilla-Yogurt-Panna-Cotta-with-Warm-Berry-Sauce.jpg
+src/Web/RecipeBook.Web/wwwroot/images/Vegan-Panna-Cotta-11.jpg
+src/Web/RecipeBook.Web/wwwroot/images/yogurt-panna-cotta-nourished-kitchen-post.jpg
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/_ViewImports.cshtml
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/ConfirmEmail.cshtml.cs
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/ForgotPassword.cshtml.cs
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/Login.cshtml
+src/Web/RecipeBook.Web/Areas/Identity/Pages/Account/Login.cshtml.cs
+src/Web/RecipeBook.Web/Areas/Identity/IdentityHostingStartup.cs
+src/Web/RecipeBook.Web/Areas/Identity/Pages/_ValidationScriptsPartial.cshtml
+src/Web/RecipeBook.Web/Areas/Identity/Pages/_ViewImports.cshtml
+src/Web/RecipeBook.Web/Services/AuthMessageSenderOptions.cs
+src/Web/RecipeBook.Web/Services/EmailSender.cs
