--- a/src/Web/RecipeBook.Web/appsettings.json
+++ b/src/Web/RecipeBook.Web/appsettings.json
@@ -1,5 +1,9 @@
 ﻿{
-  
+  "Name": "",
+  "Email": "",
+  "APISecret": "",
+  "APIKey": "",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
