--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -49,6 +49,16 @@ jobs:
       - name: Publish app
         run: dotnet publish ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release -o ./out
 
+      - name: App Settings Variable Substitution
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: './src/Web/RecipeBook.Web/appsettings.json'
+        env:
+          Name: ${{ secrets.MAILJET_SENDER_OPTIONS_NAME }}
+          APISecret: ${{ secrets.MAILJET_SENDER_OPTIONS_API_SECRET }}
+          APIKey: ${{ secrets.MAILJET_SENDER_OPTIONS_API_KEY }}
+          Email: ${{ secrets.MAILJET_SENDER_OPTIONS_EMAIL }}
+
       - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
         with: 
