--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -52,7 +52,7 @@ jobs:
       - name: App Settings Variable Substitution
         uses: microsoft/variable-substitution@v1
         with:
-          files: './src/Web/RecipeBook.Web/appsettings.json'
+          files: ./src/Web/RecipeBook.Web/appsettings.json
         env:
           Name: ${{ secrets.MAILJET_SENDER_OPTIONS_NAME }}
           APISecret: ${{ secrets.MAILJET_SENDER_OPTIONS_API_SECRET }}
