Message Sender Options are added

--- a/src/Web/RecipeBook.Web/appsettings.Release.json
+++ b/src/Web/RecipeBook.Web/appsettings.Release.json
@@ -2,6 +2,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=RecipeBook;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+
+  "Name": "",
+  "Email": "",
+  "APISecret": "",
+  "APIKey": "",
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
