--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -40,27 +40,24 @@ jobs:
       - name: move cropperjs
         run: cp -R /home/runner/work/RecipeBook/RecipeBook/node_modules/cropperjs /home/runner/work/RecipeBook/RecipeBook/node_modules/@types/cropperjs
 
+      - name: App Settings Variable Substitution
+        uses: microsoft/variable-substitution@v1
+        with:
+          files: './src/Web/RecipeBook.Web/appsettings.json'
+        env:
+          Name: ${{ secrets.MAILJET_SENDER_OPTIONS_NAME }}
+          APISecret: ${{ secrets.MAILJET_SENDER_OPTIONS_API_SECRET }}
+          APIKey: ${{ secrets.MAILJET_SENDER_OPTIONS_API_KEY }}
+          Email: ${{ secrets.MAILJET_SENDER_OPTIONS_EMAIL }}
 
       - name: Build app
         run: dotnet build ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release --no-restore
 
       - name: Automated tests
         run: dotnet test ./src/Tests/RecipeBook.Services.Data.Tests/RecipeBook.Services.Data.Tests.csproj -c Release --no-build
-
+     
       - name: Publish app
         run: dotnet publish ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj -c Release -o ./out
-
-      - name: App Settings Variable Substitution
-        uses: actions/checkout@v2
-        uses: microsoft/variable-substitution@v1
-        with:
-          files: './src/Web/RecipeBook.Web/appsettings.Release.json'
-        env:
-          Name: "some_name"
-          #${{ secrets.MAILJET_SENDER_OPTIONS_NAME }}
-          APISecret: ${{ secrets.MAILJET_SENDER_OPTIONS_API_SECRET }}
-          APIKey: ${{ secrets.MAILJET_SENDER_OPTIONS_API_KEY }}
-          Email: ${{ secrets.MAILJET_SENDER_OPTIONS_EMAIL }}
 
       - name: Deploy to Azure WebApp
         uses: azure/webapps-deploy@v2
