External login with Google is added

--- a/src/Web/RecipeBook.Web/appsettings.json
+++ b/src/Web/RecipeBook.Web/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "Authentication": {
+    "Google": {
+      "ClientId": "",
+      "ClientSecret": ""
+    }
+  },
+
   "Name": "",
   "Email": "",
   "APISecret": "",
