--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -22,7 +22,7 @@ jobs:
       - name: Setup .Net 5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '5.0.x'
+          dotnet-version: '5.0.101'
 
       - name: Restore dependencies
         run: dotnet restore ./src/Web/RecipeBook.Web/RecipeBook.Web.csproj
